We now work with SIGCHLD and call wait so that we don't leave any
zombies lying around.
For infinite timeout, we now resent the last request at +TIMEOUT_MINI
intervals until TIMEOUT_MINI_INF is reached, thanks to siadak.
We now return a non zero exit code on SIGTERM and SIGINT if we have not
forked into the background.
When NIS and/or NTP servers are updated, we restart the service for them
if we can.

dhcpcd-3.0.9
Add static routes before any default routes as a router may require a host
route in the static routes.

dhcpcd-3.0.8
Fix arp checking.
linux header asm/types.h doesn't work with c99 which is just wrong,
so it's back to gnu99 until a working linux version is released.

dhcpcd-3.0.7
Allow Linux to use Token Ring again as Linux does not have any more hardware
specific code. BPF needs a patch for Token Ring support.
Dawin is now reported to work. NetBSD and OpenBSD should work also.
cleanmetas now inserts a \ when it finds a ' so we get the proper
values in our .info files when read by a shell.
Add new CFLAGS to ensure that the code quality is good.
Use const more in public functions.

dhcpcd-3.0.6
Don't set the broadcast flag anymore as all BPF and Linux sockets should be
able to unicast correctly.

dhcpcd-3.0.5
Fix yp.conf creation.

dhcpcd-3.0.4
Fix netmask thanks to Marc Duponcheel.
Send the hostname by default unless null, (none) or localhost.
This can be overridden by using a an empty option for -h (-h '').

dhcpcd-3.0.3
NIS setup (yp.conf / domainname) works again.
Send hostname/fqdn in DISCOVER and INFORM messages too.
Add more debug messages.
Fix writing to resolv.conf when resolvconf not present.
Include linux/if_addr.h for 2.6.19+ kernels, thanks to AlexExtreme.

dhcpcd-3.0.2
Linux systems without glibc-2.3 don't have getifaddrs, so we define our own.
Changed the default timeout to 20 seconds, allowing hme Sparc drivers to work.
Set the rfds correctly so we can get a reply after re-sending a request.